# ExcelMerge

./: .gitignore  CHANGELOG.md  ExcelDiffMerge_v115.spec  ExcelDiffMerge_v116.spec  ExcelDiffMerge_v117.spec  ExcelDiffMerge_v118.spec  ExcelDiffMerge_v119.spec  ExcelDiffMerge_v120.spec  ExcelDiffMerge_v121.spec  ExcelDiffMerge_v122.spec  ExcelDiffMerge_v123.spec  ExcelDiffMerge_v124.spec  ExcelMerge.md  ExcelMerge.spec  ExcelMerge_v125.spec  ExcelMerge_v126.spec  ExcelMerge_v127.spec  ExcelMerge_v128.spec  ExcelMerge_v129.spec  ExcelMerge_v130.spec  ExcelMerge_v131.spec  ExcelMerge_v132.spec  ExcelMerge_v133.spec  ExcelMerge_v134.spec  ExcelMerge_v135.spec  ExcelMerge_v136.spec  ExcelMerge_v137.spec  ExcelMerge_v138.spec  ExcelMerge_v139.spec  NetmarbleCompare.md  README.md  RELEASE.md  build.bat  build_v115.bat  build_v116.bat  build_v117.bat  build_v118.bat  build_v119.bat  build_v120.bat  build_v123.bat  (+24 more)
.claude/: settings.local.json
excelmerge/: __init__.py  compare_toolbar.py  constants.py  crashlog.py  diff_engine.py  diff_model.py  diff_view.py  folder_compare.py  folder_view.py  loaders.py  logutil.py  main_window.py  merge_build.py  panels.py  prefs.py  statusbar.py  theme.py  uasset_parser.py  updater.py  widgets.py  workers.py  xlsx_writer.py
tests/: conftest.py  smoke_test.py  test_crashlog.py  test_csv_loader.py  test_folder_compare.py  test_folder_drop.py  test_folder_merge.py  test_hang_guards.py  test_loaders.py  test_logutil.py  test_merge_build.py  test_model_view.py  test_prefs.py  test_robustness.py  test_sign.py  test_stage_key_cells.py  (+4 more)
(+1 files in other folders)
